kubernetes/apps/ariang/oauth2-proxy-helmrelease.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: ariang
spec:
  ingressClassName: nginx
  rules:
    - host: &host ariang.flight.kja.us
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
